
macro(use_c99)
  if (CMAKE_VERSION VERSION_LESS "3.1")
    if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
      set (CMAKE_C_FLAGS "--std=gnu99 ${CMAKE_C_FLAGS}")
    endif ()
  else ()
    set (CMAKE_C_STANDARD 99)
  endif ()
endmacro(use_c99)
use_c99()
cmake_minimum_required (VERSION 3.1)
project (VELOCITYRAPTOR)
file (GLOB SOURCES "src/*.c")

add_library(VelocityRaptor ${SOURCES})
set_property(TARGET VelocityRaptor PROPERTY C_STANDARD 99)
set_property(TARGET VelocityRaptor PROPERTY lm)
